--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
       - ./.env
     restart: on-failure
     volumes:
-      - mysql_data:/var/lib/mysql/data
+      - mysql_data:/var/lib/mysql
     ports: 
       - "3306:3306"
+
   bot: 
     build: .
     command: sh -c "python -m main"
@@ -29,3 +30,4 @@ services:
 
 volumes:
   mysql_data:
+    driver: local
