--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   redis:
     image: redis:7.2.5
@@ -9,8 +8,12 @@ services:
       - "6379:6379"
   mysql: 
     image: mysql:8.0.37
-    env-file:
-      - ./.env
+    environment:
+      - MYSQL_ROOT_PASSWORD=replaY12.34.54.
+      - MYSQL_HOST=127.0.0.1
+      - MYSQL_PASSWORD=replaY12.34.54.
+      - MYSQL_DATABASE=alias_schema
+      - MYSQL_PORT=3306
     restart: on-failure
     volumes:
       - mysql_data:/var/lib/mysql
@@ -20,8 +23,8 @@ services:
   bot: 
     build: .
     command: sh -c "python -m main"
-    env-file:
-      - ./.env
+    environment:
+      - TOKEN=6937126710:AAE7tO6s4_o6llRnU2pxgYwau5ruu19sytM
     restart: always
     depends_on:
       - mysql
